<resources>
    <string name="app_name">Concesionario</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contentDescription_ivAdCar">Preview car image</string>
    <string name="tvAdCarTitle">Title</string>
    <string name="tvAdCarPrice">Price</string>
    <string name="tvAdCarLocation">Location</string>
    <string name="tvAdCarFuel">Fuel</string>
    <string name="tvAdCarKm">Km</string>
    <string name="tvAdCarTransmission">Transmission</string>
    <string name="tvAdCarColor">Color</string>
    <string name="tvAdCarPower">Power</string>
    <string name="tvAdCarYear">2000</string>
    <string name="tvAdTitle">Title</string>
    <string name="tvAdPrice">Price</string>
    <string name="tvAdReference">Reference</string>
    <string name="contentDescription_ivAd">Ad images</string>
    <string name="tvAdDescription">Description</string>
    <string name="tvAdLocation">Location</string>
    <string name="tvAdFuel">Fuel</string>
    <string name="tvAdKm">Km</string>
    <string name="tvAdYear">Year</string>
    <string name="tvAdTransmission">Transmission</string>
    <string name="tvAdColor">Color</string>
    <string name="tvAdPower">Power</string>
    <string name="tvAdNumDoors">numDoors</string>
    <string name="tvAdLinkPage">linkPage</string>
    <string name="tvMainTitle"><u>Concesionario El Cigüeñal</u></string>
    <string name="menuAccount">Mi cuenta</string>
    <string name="menuAboutUs">Sobre nosotros</string>
    <string name="menuFavs">Favoritos</string>
    <string name="descripcion"><u>Descripción:</u></string>
    <string name="tvMenuAccount">¿Aún no tienes cuenta? Créala pulsando en el botón de abajo</string>
    <string name="btMenuAccount">Crear mi cuenta</string>
    <string name="contentDescription_ivMenuAccount">Account icon</string>
    <string name="contentDescription_ivMenuFavs">Empty favorites page icon</string>
    <string name="tvMenuFavs">Aún no tienes ningún anuncio en tus favoritos</string>
    <string name="tvAboutUs"><u>Sobre nosotros</u></string>
    <string name="tvTlfTitle">Teléfono:</string>
    <string name="tvTlf">958 011 200</string>
    <string name="tvEmailTitle">Correo electrónico:</string>
    <string name="tvEmail">info@elcigueñal.es</string>
    <string name="tvDireccionTitle">Dirección:</string>
    <string name="tvDireccion">Av. de Asturias, S/N - 27124 Jaén</string>
    <string name="tvHorarioTitle">Horario de atención:</string>
    <string name="tvHorario">L - V: 10:00 a 14:00 y 16:30 a 20:30</string>
    <string name="contentDescription_ivDireccion">ImageView direccion</string>
    <string name="contentDescription_ivAdZoom">ivAdZoom</string>
    <string name="contentDescription_ivLogoConcesionario">ivLogoConcesionario</string>
</resources>