<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".view.activity.AdCarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/tvAdTitle"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvAdPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/tvAdPrice"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/tvAdReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/tvAdReference"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/contentDescription_ivAd"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btLeft"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_baseline_arrow_back_24"
                    app:iconGravity="textStart"
                    app:iconSize="50sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btRight"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="textStart"
                    app:iconSize="50sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAdDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tvAdDescription"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdLocation"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdFuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdFuel"
                app:startIconDrawable="@drawable/ic_baseline_local_gas_station_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdFuel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdKm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdKm"
                app:startIconDrawable="@drawable/ic_baseline_speed_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdKm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdYear"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdTransmission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdTransmission"
                app:startIconDrawable="@drawable/ic_baseline_alt_route_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdTransmission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdColor"
                app:startIconDrawable="@drawable/ic_baseline_color_lens_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdPower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdPower"
                app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAdNumDoors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAdNumDoors"
                app:startIconDrawable="@drawable/ic_baseline_sensor_door_24"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdNumDoors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_secondary"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textColorLink="@color/secondary"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvAdLinkPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tvAdLinkPage"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>